# menutor

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.config/: .env.example
.config/git-hooks/: pre-commit
.docker/: backend.dockerfile  test-backend.dockerfile
.docker/dev/: frontend.dockerfile
.docker/prod/: backend.dockerfile  frontend.dockerfile  nginx.conf
backend/: app_info.py  composition_root.py  main.py  main_window.py
backend/api/: auth.py  converters.py  deps.py  main.py
backend/api/routers/: auth.py  categories.py  family.py  menus.py  products.py  recipes.py  shopping_list.py  system.py
backend/api/schemas/: auth.py  category.py  family.py  menu.py  product.py  recipe.py  shopping_list.py  system.py
backend/application/ports/: shopping_list_exporter.py
backend/application/use_cases/: auth.py  generate_shopping_list.py  import_export.py  manage_category.py  manage_family.py  manage_product.py  manage_recipe.py  plan_menu.py
backend/domain/: exceptions.py
backend/domain/entities/: family_member.py  menu.py  product.py  recipe.py  refresh_token.py  shopping_list.py  user.py
backend/domain/ports/: category_repository.py  menu_repository.py  (+7 more)
docs/: changelog.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
src/: app_info.py  composition_root.py  main.py  main_window.py
src/domain/: exceptions.py
src/presentation/: units.py
tests/: conftest.py
tests/e2e/: test_full_scenario.py
tests/integration/: conftest.py
(+194 files in other folders)
